Addthis sharing buttons

--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -22,6 +22,9 @@ single: true
           <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
         </section>
         {% endif %}
+        <section>
+          {% include addthis_buttons.html %}
+        </section>
       </div>
     </div>
   </div>
