--- a/source/_includes/google_analytics.html
+++ b/source/_includes/google_analytics.html
@@ -3,7 +3,7 @@
   (function(g,r,i,f,n){g.GoogleAnalyticsObject=i,g[i]||(g[i]=function(){(g[i].q
   =g[i].q||[]).push(arguments)}),g[i].l=+new Date,f=r.createElement("script"),n
   =r.scripts[0],f.src="//www.google-analytics.com/analytics.js",n.parentNode.
-  insertBefore(f,n)}(this,document,"ga");
+  insertBefore(f,n)}(this,document,"ga"));
 
   ga('create', '{{ site.google_analytics_tracking_id }}', 'auto');
   ga('send', 'pageview');
